--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
   "author": "Jesse R Weigel",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^4.17.0",
     "inquirer": "^5.1.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.17.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "standard": "^10.0.3"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
